--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.growingio.android:vds-gradle-plugin:' + GROWINGIO_SDK_VERSION
-        classpath 'com.growingio.android:vds-class-rewriter:' + GROWINGIO_SDK_VERSION
     }
 }
 
