--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,23 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.growingio.android'
 
-def toolsVersion = '25.0.0'
-def supportVersion = "24.0.0"
+def supportVersion = "28.0.0"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion toolsVersion
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.demo.app.androidsdkdemo"
         minSdkVersion 14
-        targetSdkVersion 19
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resValue("string", "growingio_project_id", GROWINGIO_PROJECT_ID)
         resValue("string", "growingio_url_scheme", GROWINGIO_URL_SCHEME)
         resValue("string", "growingio_channel", "Github")
-        multiDexEnabled true
-        jackOptions.enabled false
-        signingConfig signingConfigs.debug
+//        multiDexEnabled true
+//        jackOptions.enabled false
+//        signingConfig signingConfigs.debug
         sourceSets {
             main {
                 jniLibs.srcDirs = ['libs']
@@ -59,15 +57,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.android.support:support-v4:${supportVersion}"
-    compile "com.android.support:appcompat-v7:${supportVersion}"
-    compile "com.android.support:design:${supportVersion}"
-    compile "com.android.support:cardview-v7:${supportVersion}"
-    compile "com.android.support:palette-v7:${supportVersion}"
+    implementation "com.android.support:support-v4:${supportVersion}"
+    implementation "com.android.support:appcompat-v7:${supportVersion}"
+    implementation "com.android.support:design:${supportVersion}"
+    implementation "com.android.support:cardview-v7:${supportVersion}"
+    implementation "com.android.support:palette-v7:${supportVersion}"
     // 添加更多库来超过64K方法数限制
     //    compile 'com.google.android.gms:play-services:9.4.0'
     //    compile 'com.google.firebase:firebase-messaging:9.2.1'
@@ -94,16 +92,17 @@ dependencies {
     //    compile 'com.umeng.analytics:analytics:latest.integration'
     //    compile 'com.github.brianPlummer:tinydancer:0.0.9'
 //    compile 'org.xutils:xutils:3.3.38'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.growingio.android:vds-android-agent:' + SdkVersion
-    compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.bugtags.library:bugtags-lib:latest.integration'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    annotationProcessor 'com.jakewharton:butterknife:7.0.1'
+    implementation 'com.growingio.android:vds-android-agent:' + SdkVersion
+    implementation 'com.github.devlight:infinitecycleviewpager:1.0.2'
+    implementation 'com.bugtags.library:bugtags-lib:latest.integration'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.jakewharton:butterknife:7.0.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
