--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-XX:MaxPermSize=2g
 #GROWINGIO_SDK_VERSION=0.9.101
-GROWINGIO_SDK_VERSION=0.0.1-SNAPSHOT
+GROWINGIO_SDK_VERSION=2.4.5
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
