Update sdk version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.growingio.android'
 
-def toolsVersion = '25.0.0'
-def supportVersion = "24.0.0"
+def toolsVersion = '28.0.0'
+def supportVersion = "28.0.0"
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 30
     buildToolsVersion toolsVersion
     defaultConfig {
         applicationId "com.demo.app.androidsdkdemo"
         minSdkVersion 14
-        targetSdkVersion 19
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
-        jackOptions.enabled false
         signingConfig signingConfigs.debug
         sourceSets {
             main {
@@ -72,7 +71,7 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 }
-
+android.defaultConfig.javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -83,6 +82,8 @@ dependencies {
     compile "com.android.support:design:${supportVersion}"
     compile "com.android.support:cardview-v7:${supportVersion}"
     compile "com.android.support:palette-v7:${supportVersion}"
+    implementation 'com.growingio.android:vds-android-agent:autotrack-2.9.0'
+
     // 添加更多库来超过64K方法数限制
     //    compile 'com.google.android.gms:play-services:9.4.0'
     //    compile 'com.google.firebase:firebase-messaging:9.2.1'
@@ -109,7 +110,6 @@ dependencies {
     //    compile 'com.umeng.analytics:analytics:latest.integration'
     //    compile 'com.github.brianPlummer:tinydancer:0.0.9'
 //    compile 'org.xutils:xutils:3.3.38'
-    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.growingio.android:vds-android-agent:' + SdkVersion
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
